# R-Type

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt  config_game.txt  install.sh  run_game.bat
.github/workflows/: continuous_dev.yml
ECS/: main_test.cpp
ECS/include/: AISystem.hpp  ASystem.hpp  Entity.hpp  EntityManager.hpp  HitboxSystem.hpp  PlayerSystem.hpp  SendingEntityServer.hpp  WeaponSystem.hpp
ECS/include/SystemManager/: ASystem.hpp  Entity.hpp  EntityManager.hpp  EntitySystem.hpp  HitboxSystem.hpp  ISystem.hpp  MissileSystem.hpp  MonsterSystem.hpp  PlayerSystem.hpp  SendingEntityServer.hpp  ShootSystem.hpp
ECS/include/components/: AComponent.hpp  AI_ennemies.hpp  Constants.hpp  Damages.hpp  Health.hpp  HitBox.hpp  IComponent.hpp  Position.hpp  Shoot.hpp  ShootCD.hpp  Speed.hpp
ECS/src/: Entity.cpp  EntityManager.cpp
ECS/src/SystemManager/: Entity.cpp  EntityManager.cpp  EntitySystem.cpp  HitboxSystem.cpp  MissileSystem.cpp  MonsterSystem.cpp  PlayerSystem.cpp  ShootSystem.cpp
ECS/src/components/: Damages.cpp  Health.cpp  HitBox.cpp  Position.cpp  Shoot.cpp  ShootCooldown.cpp  Speed.cpp
Engine/: main.cpp
Engine/includes/: Component.hpp  ECSManager.hpp  Entity.hpp  System.hpp
Engine/src/: Component.cpp  ECSManager.cpp  Entity.cpp  System.cpp
client/: CMakeLists.txt  Makefile  client_rtype
client/include/: Client.hpp  Game.hpp  Menu.hpp  Mode.hpp  Options.hpp  Player.hpp  SoundObject.hpp  SpriteObject.hpp  Texture.hpp
client/menu/: fusion.cpp  protocole.cpp
client/src/: Client.cpp  Game.cpp  Main.cpp  Menu.cpp  Options.cpp  Player.cpp
cmake/: DetectCompiler.cmake
server/: CMakeLists.txt  README.md  client_test_multithreading.py  client_tester_two.py  explication_threads_server.txt  server_test_one_client.py  unit_test_server.py
server/include/: client.hpp  server.hpp
server/src/: main.cpp  server.cpp
src/client/: a.out  menu.cpp
